--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Lego dkouril.net</h1>
 
-  <img src="https://www.lego.com/cdn/cs/set/assets/blt2816e39fc7d5f238/2000409_alt1.jpg">
+  <img width="800px" src="https://www.lego.com/cdn/cs/set/assets/blt2816e39fc7d5f238/2000409_alt1.jpg">
   
   <ul>
   <li>
